Add the "Preview TRF" feature to "To Do", "Tracking" and "Complete and Release" screens. See ticket #1051. Added the scriptlet for the test "ms-conf".