@@ -23,7 +23,7 @@
  * which case the provisions of a UIRF Software License are applicable instead
  * of those above.
  */
-package org.openelis.scriptlet.ms.quad;
+package org.openelis.scriptlet.ms.conf;
 
 import java.util.HashMap;
 import java.util.logging.Level;
@@ -34,6 +34,7 @@ import org.openelis.domain.AnalyteParameterViewDO;
 import org.openelis.domain.Constants;
 import org.openelis.domain.DictionaryDO;
 import org.openelis.domain.ResultViewDO;
+import org.openelis.domain.SampleItemViewDO;
 import org.openelis.manager.SampleManager1;
 import org.openelis.manager.TestManager;
 import org.openelis.meta.SampleMeta;
@@ -41,6 +42,7 @@ import org.openelis.scriptlet.SampleSO;
 import org.openelis.scriptlet.SampleSO.Action_Before;
 import org.openelis.scriptlet.ms.ScriptletProxy;
 import org.openelis.scriptlet.ms.Util;
+import org.openelis.scriptlet.ms.conf.Constants.Sample_Type;
 import org.openelis.scriptlet.ms.quad.Constants.Gest_Age_Method;
 import org.openelis.scriptlet.ms.quad.Constants.Interpretation;
 import org.openelis.ui.common.DataBaseUtil;
@@ -55,13 +57,12 @@ import com.google.gwt.i18n.shared.DateTimeFormat;
 import com.google.gwt.i18n.shared.DefaultDateTimeFormatInfo;
 
 /**
- * The scriptlet for "ms quad (Maternal Quad Screen)" test. It uses a compute
- * engine to calculate the MoMs for various tests such as AFP and risks and
- * interpretations for various disorders such as NTD. The computations are done
- * based on patient information and results entered by the analyst. If the
- * results are overridden, the MoMs, risks and interpretations are blanked. The
- * computations are done as soon as the user changes any of the values or on
- * completing/releasing the analysis.
+ * The scriptlet for "ms ntd (Maternal NTD Screen)" test. It uses a compute
+ * engine to compute the MoMs for AFP and risk and interpretation for NTD. The
+ * computations are done based on patient information and results entered by the
+ * analyst. If the results are overridden, the MoM, risk and interpretation are
+ * blanked. The computations are done as soon as the user changes any of the
+ * values or on completing/releasing the analysis.
  */
 public class Scriptlet implements ScriptletInt<SampleSO> {
 
@@ -71,44 +72,40 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
 
     private Compute                                        compute;
 
-    private HashMap<String, HashMap<String, ResultViewDO>> resultMap;
-
     private static DateTimeFormat                          dateFormatter;
+
+    private HashMap<String, HashMap<String, ResultViewDO>> resultMap;
 
     private static boolean                                 initialized;
 
     private static Integer                                 YES, NO, GEST_AGE_LMP, GEST_AGE_US,
-                    INT_POSITIVE, INT_NEGATIVE, INT_UNKNOWN, ACTION_US, ACTION_AMN, ACTION_US_AMN,
-                    ACTION_NO_ACTION, ACTION_RISK_NOT_CALC;
+                    INT_POSITIVE, INT_NEGATIVE, ACTION_US_AMN, ACTION_SEE_ACHE, ACTION_NO_ACTION,
+                    SAM_TYPE_SERUM, SAM_TYPE_AMNIOTIC_FLUID;
 
     private static String                                  YES_STR;
-
-    private enum Risk {
-        NTD, DOWNS, T18
-    }
 
     public Scriptlet(ScriptletProxy proxy, Integer analysisId) {
         this.proxy = proxy;
         this.analysisId = analysisId;
 
-        proxy.log(Level.FINE, "Initializing MSQuadScriptlet1", null);
+        proxy.log(Level.FINE, "Initializing MSConfScriptlet1", null);
         try {
             if ( !initialized) {
                 initialized = true;
+                SAM_TYPE_SERUM = proxy.getDictionaryBySystemName("sample_type_serum").getId();
+                SAM_TYPE_AMNIOTIC_FLUID = proxy.getDictionaryBySystemName("sample_type_amniotic_fluid")
+                                               .getId();
                 YES = proxy.getDictionaryBySystemName("yes").getId();
                 NO = proxy.getDictionaryBySystemName("no").getId();
                 GEST_AGE_LMP = proxy.getDictionaryBySystemName("gest_age_date_type_lmp").getId();
                 GEST_AGE_US = proxy.getDictionaryBySystemName("gest_age_date_type_us").getId();
                 INT_POSITIVE = proxy.getDictionaryBySystemName("positive").getId();
                 INT_NEGATIVE = proxy.getDictionaryBySystemName("negative").getId();
-                INT_UNKNOWN = proxy.getDictionaryBySystemName("unknown").getId();
-                ACTION_US = proxy.getDictionaryBySystemName("ms_rec_action_us").getId();
-                ACTION_AMN = proxy.getDictionaryBySystemName("ms_rec_action_amn").getId();
                 ACTION_US_AMN = proxy.getDictionaryBySystemName("ms_rec_action_us_amn").getId();
+                ACTION_SEE_ACHE = proxy.getDictionaryBySystemName("ms_rec_action_see_ache_res")
+                                       .getId();
                 ACTION_NO_ACTION = proxy.getDictionaryBySystemName("ms_rec_action_no_action")
                                         .getId();
-                ACTION_RISK_NOT_CALC = proxy.getDictionaryBySystemName("ms_rec_action_risk_not_calc")
-                                            .getId();
                 YES_STR = YES.toString();
 
                 /*
@@ -119,7 +116,7 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
                 };
             }
             compute = new Compute();
-            proxy.log(Level.FINE, "Initialized MSQuadScriptlet1", null);
+            proxy.log(Level.FINE, "Initialized MSConfScriptlet1", null);
         } catch (Exception e) {
             initialized = false;
             proxy.log(Level.SEVERE, "Failed to initialize dictionary constants", e);
@@ -130,9 +127,10 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
     public SampleSO run(SampleSO data) {
         SampleManager1 sm;
         AnalysisViewDO ana;
+        SampleItemViewDO item;
         ResultViewDO res;
 
-        proxy.log(Level.FINE, "In MSQuadScriptlet1.run", null);
+        proxy.log(Level.FINE, "In MSConfScriptlet1.run", null);
 
         sm = data.getManager();
         ana = (AnalysisViewDO)sm.getObject(Constants.uid().getAnalysis(analysisId));
@@ -142,8 +140,9 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
 
         /*
          * manage result changed, the risks needing to be recomputed, the
-         * analysis getting completed or released, a qa event added/removed or
-         * collection date, patient's birth date or patient's race changed
+         * analysis getting completed or released, sample type changed, a qa
+         * event added/removed or collection date, patient's birth date or
+         * patient's race changed
          */
         if (data.getActionBefore().contains(Action_Before.RESULT)) {
             res = (ResultViewDO)sm.getObject(data.getUid());
@@ -153,6 +152,10 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
                    data.getActionBefore().contains(Action_Before.RELEASE)) {
             ana = (AnalysisViewDO)sm.getObject(data.getUid());
             if ( !analysisId.equals(ana.getId()))
+                return data;
+        } else if (data.getActionBefore().contains(Action_Before.SAMPLE_ITEM)) {
+            item = (SampleItemViewDO)sm.getObject(data.getUid());
+            if ( !item.getId().equals(ana.getSampleItemId()))
                 return data;
         } else if ( !data.getActionBefore().contains(Action_Before.QA) &&
                    !data.getActionBefore().contains(Action_Before.PATIENT) &&
@@ -219,7 +222,7 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
      * Initialize a hash map where the key is the external id of a row analyte
      * and the value is another hash map containing the ResultViewDOs for all
      * analytes in the row; the key in the second map is the external id of a
-     * row or column analyte and the value is the ResultVIewDO for that analyte;
+     * row or column analyte and the value is the ResultVIewDO for the analyte;
      * these maps are used to quickly lookup ResultViewDOs for getting or
      * setting their value
      */
@@ -378,7 +381,9 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
     private void setComputeValues(SampleSO data, AnalysisViewDO ana) throws Exception {
         Integer gestAgeMethodId;
         SampleManager1 sm;
+        SampleItemViewDO item;
         AnalyteParameterViewDO ap;
+        Sample_Type sampleType;
         HashMap<Integer, AnalyteParameterViewDO> paramMap;
 
         proxy.log(Level.FINE, "Setting values in the compute engine", null);
@@ -417,43 +422,24 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
             compute.setGestAgeInitMethod(Gest_Age_Method.LMP);
         else if (GEST_AGE_US.equals(gestAgeMethodId))
             compute.setGestAgeInitMethod(Gest_Age_Method.US);
+
+        item = (SampleItemViewDO)sm.getObject(Constants.uid().getSampleItem(ana.getSampleItemId()));
+        sampleType = getSampleType(item.getTypeOfSampleId());
+        compute.setSampleType(sampleType);
         /*
          * get the analyte parameters for this analysis' test
          */
         paramMap = Util.getParameters(ana.getTestId(), Constants.table().TEST, proxy, data, ana);
         /*
-         * set p-values and result from the intrument for tests e.g. AFP
+         * set p-values and result from the intrument for AFP
          */
         ap = paramMap != null ? paramMap.get(getAnalyteId("ms_afp")) : null;
         compute.setResultAFP(new AFP(getP1(ap),
                                      getP2(ap),
                                      getP3(ap),
                                      getDoubleValue(getResult("ms_afp", "result"), sm, ana, true),
-                                     getAnalyteName("ms_afp")));
-        ap = paramMap != null ? paramMap.get(getAnalyteId("ms_estriol")) : null;
-        compute.setResultEST(new EST(getP1(ap),
-                                     getP2(ap),
-                                     getP3(ap),
-                                     getDoubleValue(getResult("ms_estriol", "result"),
-                                                    sm,
-                                                    ana,
-                                                    true),
-                                     getAnalyteName("ms_estriol")));
-        ap = paramMap != null ? paramMap.get(getAnalyteId("ms_hcg")) : null;
-        compute.setResultHCG(new HCG(getP1(ap),
-                                     getP2(ap),
-                                     getP3(ap),
-                                     getDoubleValue(getResult("ms_hcg", "result"), sm, ana, true),
-                                     getAnalyteName("ms_hcg")));
-        ap = paramMap != null ? paramMap.get(getAnalyteId("ms_inhibin")) : null;
-        compute.setResultInhibin(new INH(getP1(ap),
-                                         getP2(ap),
-                                         getP3(ap),
-                                         getDoubleValue(getResult("ms_inhibin", "result"),
-                                                        sm,
-                                                        ana,
-                                                        true),
-                                         getAnalyteName("ms_inhibin")));
+                                     getAnalyteName("ms_afp"),
+                                     sampleType));
     }
 
     /**
@@ -463,6 +449,7 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
     private void setResultValues(SampleSO data, AnalysisViewDO ana) throws Exception {
         Object value;
         TestManager tm;
+        SampleItemViewDO item;
         ResultFormatter rf;
 
         proxy.log(Level.FINE, "Setting values in the results from the compute engine", null);
@@ -470,55 +457,27 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
         rf = tm.getFormatter();
         setValue(getResult("ms_age_delivery"), compute.getMothersDueAge(), rf, false, data, ana);
         /*
-         * MoMs
+         * MoM
          */
         setValue(getResult("ms_afp"), compute.getMoMAFP(), rf, false, data, ana);
-        setValue(getResult("ms_estriol"), compute.getMoMEST(), rf, false, data, ana);
-        setValue(getResult("ms_hcg"), compute.getMoMHCG(), rf, false, data, ana);
-        setValue(getResult("ms_inhibin"), compute.getMoMINH(), rf, false, data, ana);
         /*
          * risks, screening cutoffs(limits), interpretations, recommended
          * actions; ntd
          */
         value = null;
+        item = (SampleItemViewDO)data.getManager()
+                                     .getObject(Constants.uid()
+                                                         .getSampleItem(ana.getSampleItemId()));
         if (compute.getLimitNTD() != null)
-            value = DataBaseUtil.concatWithSeparator("NTD >=", " ", compute.getLimitNTD());
+            value = DataBaseUtil.concatWithSeparator("NTD >=", " ", Util.format(compute.getLimitNTD(), 1, proxy));
         setValue(getResult("ms_afp", "ms_screen_cutoff"), value, rf, false, data, ana);
         setInterpretation("ms_afp", compute.getInterpretationNTD(), rf, data, ana);
-        setRecommendedAction("ms_afp", compute.getInterpretationNTD(), Risk.NTD, rf, data, ana);
-        /*
-         * downs
-         */
-        setRisk("ms_downs", compute.getRiskSignDowns(), compute.getRiskDowns(), rf, data, ana);
-        setScreeningCutoff("ms_downs", compute.getLimitDowns(), rf, data, ana);
-        setInterpretation("ms_downs", compute.getInterpretationDowns(), rf, data, ana);
-        setRecommendedAction("ms_downs",
-                             compute.getInterpretationDowns(),
-                             Risk.DOWNS,
+        setRecommendedAction("ms_afp",
+                             compute.getInterpretationNTD(),
+                             getSampleType(item.getTypeOfSampleId()),
                              rf,
                              data,
                              ana);
-        /*
-         * t18
-         */
-        setRisk("ms_trisomy_18",
-                compute.getRiskSignTrisomy18(),
-                compute.getRiskTrisomy18(),
-                rf,
-                data,
-                ana);
-        setScreeningCutoff("ms_trisomy_18", compute.getLimitTrisomy18(), rf, data, ana);
-        setInterpretation("ms_trisomy_18", compute.getInterpretationTrisomy18(), rf, data, ana);
-        setRecommendedAction("ms_trisomy_18",
-                             compute.getInterpretationTrisomy18(),
-                             Risk.T18,
-                             rf,
-                             data,
-                             ana);
-        /*
-         * downs by age
-         */
-        setValue(getResult("ms_downs_age"), compute.getRiskDownsByAge(), rf, false, data, ana);
         /*
          * gestational ages, methods
          */
@@ -548,12 +507,6 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
          */
         formatValue(getResult("ms_afp"), 2, tm.getFormatter(), false, data, ana);
         formatValue(getResult("ms_afp", "result"), 2, tm.getFormatter(), true, data, ana);
-        formatValue(getResult("ms_estriol"), 2, tm.getFormatter(), false, data, ana);
-        formatValue(getResult("ms_estriol", "result"), 2, tm.getFormatter(), true, data, ana);
-        formatValue(getResult("ms_hcg"), 2, tm.getFormatter(), false, data, ana);
-        formatValue(getResult("ms_hcg", "result"), 2, tm.getFormatter(), true, data, ana);
-        formatValue(getResult("ms_inhibin"), 2, tm.getFormatter(), false, data, ana);
-        formatValue(getResult("ms_inhibin", "result"), 2, tm.getFormatter(), true, data, ana);
     }
 
     /**
@@ -630,6 +583,22 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
     }
 
     /**
+     * Returns an element of the enum Sample_Type based on the passed sample
+     * type id
+     */
+    private Sample_Type getSampleType(Integer sampleTypeId) {
+        if (sampleTypeId == null)
+            return null;
+
+        if (SAM_TYPE_SERUM.equals(sampleTypeId))
+            return Sample_Type.SERUM;
+        else if (SAM_TYPE_AMNIOTIC_FLUID.equals(sampleTypeId))
+            return Sample_Type.AMNIOTIC_FLUID;
+
+        return null;
+    }
+
+    /**
      * Returns the passed result's value converted to an Integer; returns null
      * if the value is null; throws an exception if the value contains any
      * non-numeric characters such as "<" or ">"
@@ -638,7 +607,7 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
         if (res == null || res.getValue() == null)
             return null;
         try {
-            return new Integer(res.getValue());
+            return Integer.valueOf(res.getValue());
         } catch (NumberFormatException e) {
             throw getValueInvalidException(res, sm, ana);
         }
@@ -668,7 +637,7 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
             return null;
         value = allowLessThan ? res.getValue().replaceAll("<", "") : res.getValue();
         try {
-            return new Double(value);
+            return Double.valueOf(value);
         } catch (NumberFormatException e) {
             throw getValueInvalidException(res, sm, ana);
         }
@@ -721,30 +690,6 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
     }
 
     /**
-     * Sets the value of the analyte with the passed external id as the risk
-     * created from the passed risk sign and computed risk
-     */
-    private void setRisk(String externalId, String riskSign, Integer risk, ResultFormatter rf,
-                         SampleSO data, AnalysisViewDO ana) throws Exception {
-        String value;
-
-        value = risk == null ? null : DataBaseUtil.concatWithSeparator(riskSign, "1:", risk);
-        setValue(getResult(externalId), value, rf, false, data, ana);
-    }
-
-    /**
-     * Sets the value of the analyte with the passed external id as the
-     * screening cutoff created from the passed computed limit
-     */
-    private void setScreeningCutoff(String externalId, Integer limit, ResultFormatter rf,
-                                    SampleSO data, AnalysisViewDO ana) throws Exception {
-        String value;
-
-        value = limit == null ? null : DataBaseUtil.concat("1:", limit);
-        setValue(getResult(externalId, "ms_screen_cutoff"), value, rf, false, data, ana);
-    }
-
-    /**
      * Sets the value of the analyte with the passed external id as the
      * interpretation e.g. "Positive", based on the passed computed
      * interpretation e.g. "Presumptive Positive"
@@ -763,9 +708,6 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
                 case PRES_POS_AS:
                     value = INT_POSITIVE;
                     break;
-                case UNKNOWN:
-                    value = INT_UNKNOWN;
-                    break;
             }
         }
         setValue(getResult(externalId, "interpretation"), value, rf, true, data, ana);
@@ -774,10 +716,11 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
     /**
      * Sets the value of the analyte with the passed external id as a
      * recommended action e.g. "Offer amniocentesis"; the action depends on the
-     * passed interpretation e.g. "Positive" and a risk e.g. "Downs"
+     * passed interpretation e.g. "Positive"
      */
-    private void setRecommendedAction(String externalId, Interpretation interp, Risk risk,
-                                      ResultFormatter rf, SampleSO data, AnalysisViewDO ana) throws Exception {
+    private void setRecommendedAction(String externalId, Interpretation interp,
+                                      Sample_Type sampleType, ResultFormatter rf, SampleSO data,
+                                      AnalysisViewDO ana) throws Exception {
         Integer value;
 
         value = null;
@@ -787,29 +730,15 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
                     value = ACTION_NO_ACTION;
                     break;
                 case PRES_POS:
-                    switch (risk) {
-                        case NTD:
-                        case DOWNS:
-                            value = ACTION_US;
-                            break;
-                        case T18:
-                            value = ACTION_AMN;
-                            break;
-                    }
-                    break;
                 case PRES_POS_AS:
-                    switch (risk) {
-                        case NTD:
+                    switch (sampleType) {
+                        case SERUM:
                             value = ACTION_US_AMN;
                             break;
-                        case DOWNS:
-                        case T18:
-                            value = ACTION_AMN;
+                        case AMNIOTIC_FLUID:
+                            value = ACTION_SEE_ACHE;
                             break;
                     }
-                    break;
-                case UNKNOWN:
-                    value = ACTION_RISK_NOT_CALC;
                     break;
             }
         }
@@ -839,12 +768,12 @@ public class Scriptlet implements ScriptletInt<SampleSO> {
         setValue(getResult(externalId, "ms_determined_by"), value, rf, true, data, ana);
     }
 
-   /**
-     * Formats the passed result's value to have one or two fractional digits
-     * based on the passed precision; the boolean flag specifies whether the 
-     * value can have a "<"; if the value has a "<" before formatting, 
-     * concatenates "<" to the formatted value 
-     */
+    /**
+      * Formats the passed result's value to have one or two fractional digits
+      * based on the passed precision; the boolean flag specifies whether the 
+      * value can have a "<"; if the value has a "<" before formatting, 
+      * concatenates "<" to the formatted value 
+      */
     private void formatValue(ResultViewDO res, int precision, ResultFormatter rf,
                              boolean allowLessThan, SampleSO data, AnalysisViewDO ana) throws Exception {
         boolean hasLessThan;
